# typebox-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
examples/: ladybug_types.rs
src/: builder.rs  error.rs  format.rs  layout.rs  lib.rs  registry.rs  schema.rs  validate.rs
src/codegen/: mod.rs  rust.rs  typescript.rs
src/value/: cast.rs  check.rs  clean.rs  clone.rs  create.rs  delta.rs  equal.rs  fake.rs  hash.rs  mod.rs  mutate.rs  patch.rs  pointer.rs
tests/: test_schema.rs
