[package]
name = "typebox"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["alkimiadev"]
description = "JSON Schema type construction with validation, code generation, and binary layout"
repository = "https://github.com/alkimiadev/typebox-rs"
keywords = ["json-schema", "validation", "codegen", "typescript", "ffi"]
categories = ["data-structures", "development-tools::ffi", "encoding"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
indexmap = { version = "2", features = ["serde"] }
base64 = "0.22"

# Optional dependencies
handlebars = { version = "5", optional = true }
fake = { version = "4", optional = true }
rand = { version = "0.9", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
memmap2 = { version = "0.9", optional = true }
regex = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
codegen = ["handlebars"]
fake = ["dep:fake", "dep:rand", "dep:uuid"]
safetensor = ["memmap2"]
ffi = []
pattern = ["regex"]

[[example]]
name = "ladybug_types"
required-features = ["codegen"]
